--- a/main.ipynb
+++ b/main.ipynb
@@ -838,13 +838,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "From the visualization of the top 6 filters by euclidian norm, we can see that all of these filters are fairly similar in nature and seem to have their highsst value in the middle and relatively smaller values for the non-center coefficients. However, these other values do differ somewhat for these filters, meaning they aren't all the same category. Channel 109 i"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 49,
    "metadata": {},
@@ -894,11 +887,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "when we tried to get the 6 highest l2 norm filters, some of them just didn't visualize, even when we adjusted the gradient ascent function and decreased the learning rate and increased iterations, or they weren;t able to fully visualize (124 is an example of this). Most of these filters partially visualize as points but not fully and not consistatnely and a common thread between these poorly visualizing filters was that they were all-pass filters, which doesn't seem useful intuitively and it is interesting that that is what the network learned, particularly becuase these are the highest l2-norm single channel filters in our multi-channel filter. We then grabbed a bunch of other filters to visualize that weren't all-pass filters to see if we could get more useful results. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# sifted through the highest l2 norms and found these non-all-pass filters\n",
     "top_filters = [336, 316, 56, 268, 447, 276, 302,368]"
    ]
   },
@@ -919,7 +920,7 @@
     }
    ],
    "source": [
-    "# Plotting the top 6 channels with numerical values in center\n",
+    "# plotting the filters\n",
     "fig, axs = plt.subplots(2, 4, figsize=(15, 10), gridspec_kw={'hspace': 0.5, 'wspace': 0.3})\n",
     "for i in range(8):\n",
     "    ax = axs[i//4, i%4]\n",
@@ -935,12 +936,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Channel 336 is an excitatory filter, because it has more high magnitude positive coefficients compared to negative coefficients. \n",
+    "\n",
+    "Channel 316 is also an excitatory filter because it has all positive coefficients. \n",
+    "\n",
+    "Channel 56 is also an excitatory filter because it has all positive coefficients. \n",
+    "\n",
+    "Channel 268 is also an excitatory filter because it has all positive coefficients. \n",
+    "\n",
+    "However, Channel 447 is an inhibitory filter, as all the coefficients are negative. \n",
+    "\n",
+    "Channel 276 is mostly excitatory, because there are more positive coefficients and they are larger in magintude. \n",
+    "\n",
+    "Channel 302 is almost in between excitatory and inhibitory, because there is one more negative coeffcient than poistive coefficients, but the largest magnitude coefficient is positive. \n",
+    "\n",
+    "channel 368 is inhibitory, becuase it has all negative or 0 coefficients. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# run gradient ascent on each of the 6 filters\n",
+    "# run gradient ascent on each of the 8 filters\n",
     "outputs = []\n",
     "for n in top_filters:\n",
     "    outputs.append(generate_pattern('block4_conv4', n))"
@@ -977,7 +999,7 @@
     }
    ],
    "source": [
-    "# plot each of the outputs\n",
+    "# plotting each of the outputs\n",
     "fig, axs = plt.subplots(2, 4, figsize=(15, 10), gridspec_kw={'hspace': 0.5, 'wspace': 0.3})\n",
     "for i in range(8): \n",
     "    ax = axs[i//4, i%4]\n",
@@ -987,19 +1009,33 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "336: We believe that this filter is activated by spots, as evidenced by the maximally exciting image. these spots are medium in size, and there isn't that much other texture. If we look at the coefficients, we see a really large positive value in the middle, smalller postive values in the adjacent cells, and even smaller negative values in the corners. \n",
+    "\n",
+    "316: We believe this filter is also activated by spots, but it is also activated by texture. The texture looks like a repeating gradiant of high to low frequency. The spots in this filter are also smaller than the ones in 336 but they vary in size along the repeating gradient. The coeffcients are higher in the top 2 rows of the filter with the highest coefficients being the middle one and the one right above that. The bottom row of coefficents are near zero but not negative.\n",
+    "\n",
+    "56: This filter also gets maximally activated by spots. However, the spots which excite this filter are larger than the previous two filters. The filter also gets excited by groups of larger spots. The texture around the spots seems to divide the spots into multiple batches. Similar to 316, the coefficients are highest in the middle and the one above and the lowest coefficnets are in the bottom row but still not negative. \n",
+    "\n",
+    "268: This filter is activated maximally by a unique texture. We are not sure what this texture is representing but we will note that there do seem to be some small spots of varying sizes in an unorganized gradient format. The coefficents for this are entirly positive with the middle cell having the highest value and the bottom row, once again, having the lowest values near zero.\n",
+    "\n",
+    "447: This filter seems to activated by \"v-shaped\" spots that are scattered around the image and seperated by lined textures which flow away from the center of the spot. The activations for this filter are entirlely negative with less difference in magnitudes between the 9 coefficents, but the middle values are the largest in magnitude by a small margin.\n",
+    "\n",
+    "276: This filkter "
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mlenv2022",
+   "display_name": "Python 3.8.10 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1013,12 +1049,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.8.10"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "9a61028bdfeff4ddff08b09187dae4144e7788e8f752dda32b973b4a39cba6a5"
+    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
    }
   }
  },
