--- a/main.ipynb
+++ b/main.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "CNN Visualization Lab - VGG19\n",
+    "\n",
+    "Vedant Nilabh\n",
+    "\n",
+    "Saaketh Koka \n",
+    "\n",
+    "Rayaan Irani"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -22,7 +35,7 @@
    "source": [
     "# The Model\n",
     "\n",
-    "We decided to use the VGG19 model trained on imagenet."
+    "We decided to use the VGG19 model trained on imagenet. We chose this model due to its relative simplicity (feedforward - no branches/residual connections), which makes the circuit analysis signifcantly easier and more intuituve. "
    ]
   },
   {
@@ -1009,13 +1022,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1027,10 +1033,33 @@
     "\n",
     "268: This filter is activated maximally by a unique texture. We are not sure what this texture is representing but we will note that there do seem to be some small spots of varying sizes in an unorganized gradient format. The coefficents for this are entirly positive with the middle cell having the highest value and the bottom row, once again, having the lowest values near zero.\n",
     "\n",
-    "447: This filter seems to activated by \"v-shaped\" spots that are scattered around the image and seperated by lined textures which flow away from the center of the spot. The activations for this filter are entirlely negative with less difference in magnitudes between the 9 coefficents, but the middle values are the largest in magnitude by a small margin.\n",
+    "447: This filter seems to activated by \"v-shaped\" spots that are scattered around the image and seperated by lined textures which flow away from the center of the spot. The activations for this filter are entirlely negative with less difference in magnitudes between the 9 coefficents, but the middle values are the largest in magnitude by a small margin. Because this an inhibitory filter, our multi-channel filter is penalizing this formation. \n",
     "\n",
-    "276: This filkter "
+    "276: This filter is activated most by a texture of overlapping circular textures. These textures seem to contain smaller versions of themselves with lines of varying thickness. The largest coefficient value is the top middle cell with the second largest being the middle cell. The bottom row is entirley small in magnitude and negative. \n",
+    "\n",
+    "302: These seem to be medium-sized spots that are sparsley connected by lines. The center coefficeint is the largest and the bottom row coefficients are negative. \n",
+    "\n",
+    "368: The maximally activated image seems to be composed of an interwoven branch structure. This structure consists of overlapping branches of varying sizes with the largest branches being on top of the smaller ones. The coeffcients are almost enitely negative iwth the 2 leftmost filters in the first 2 rows ahving the largest magnitudes, and the center having the absolute largest.Because this an inhibitory filter, our multi-channel filter is penalizing this formation. "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Based on the individual filters that we think make up this circuit, we believe it is polysemantic in nature due to its incorporation of both spots and textures. Based on the classes most activated by our chosen filter (which is the result of our circuit), we think some of these tetures correspond to fur, which is why 5 of our top 6 most excitatory classes are spotted, furry animals. However, some of the textures are entirely different, with 276 seeming to be textured spots, 447 being distinctly shaped spots with a simmple fur like texture, and 368 seeming to correspond to brach/grid like textures/structures with spaces between rather than spots. However, 276 is still excitatory, while 447 and 368 are inhibitory, which we posit makes the circuit able to extend the definition of spots to include holes and textured circular patterns, which could exxplain the disk brake class, for exampple. In contrast, 447 and 348 being inhibitory means that those patterns are penalized by our multi-channel filter, meaning that non-cirulcar spots and striaght-lined textures (447), as well as branch-like structures are penalized by our filter.  When we look at all these filters in aggregate, all of them seem to carry the property of translational (or pose) invariance for the different spot/texture formations that maximally excite them. This an important property that we would expect to see in these filters because they are later in the network, and that does seem to carry over to our multichannel filter visualization as well. Furthermore, the circuit does seem to be polsysemantic, as it is essentally primed to detect spots or spot-like features in an image with varying textures, which is why we see so much diversity in the types of \"spots\" that we see in our top excitatory classes. For example, beyond spotted, furry animals, we see agaric/mushrooms (spotted fungus), honeycomb (an extension of spots due to the variety of our circuit, maybe this is connected to filter 276), and disk brakes (the holes seem to once again be detected as spots). Overall, most of our excitaratory filters are detecting different forms and configurations of spots, in terms of size and grouping and a bias toward textures involving a gradient of spots and finer textures resulting from the spots. Our inhibtiry filters seem to cresspond to brach strcutures and non-circular irregular spots. We conclude that our circuit is a polysmeantic spot detector that also detects animal fur and holes, but penalizes against non-circular spots and branch stuctures."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This partialy concurs with our original hypothesis, as spots are definitelk key for the filter, and fur is one of the main types of texture our ciircuit seems to be senstive toward. However, it is a bit more general than that, in that there are other types of textures also being detected by the filters that make up our circuit. so, it is really a polysematnic spot detector for certain textures, which explains many of the most activated classes. We stil aren't sure about the football helmet class, but that was only 10th, and might be random. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
